--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.17",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.4.0"
   }
 }
