--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.17",
     "morgan": "~1.9.0",
-    "multer": "^1.4.0"
+    "multer": "^1.4.0",
+    "svg-captcha": "^1.3.11"
   }
 }
